force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Lead Perdido</fullName>
                <label>Lead Perdido(não trabalho)</label>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Nutrindo</fullName>
            </value>
            <value>
                <fullName>Tentativa de contato</fullName>
            </value>
            <value>
                <fullName>Contato Realizado</fullName>
            </value>
            <value>
                <fullName>Agendamento de Visita</fullName>
            </value>
            <value>
                <fullName>Qualificação</fullName>
            </value>
            <value>
                <fullName>Convertido</fullName>
                <label>Conversão</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>