force-app/main/default/objects/ConfiguracoesDeNegocio__c/fields/motivoDaPerda__c.field-meta.xml
<CustomField>
    <fullName>motivoDaPerda__c</fullName>
    <label>Motivo da Não Qualificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não conseguimos Contato</fullName>
            </value>
            <value>
                <fullName>Não possuímos produtos em linha com as características de Investimento do cliente</fullName>
            </value>
            <value>
                <fullName>Pesquisa aponta risco de fraude ou especulação</fullName>
            </value>
            <value>
                <fullName>Solicitado exclusão do cadastro pelo cliente</fullName>
            </value>
            <value>
                <fullName>Corretor</fullName>
            </value>
            <value>
                <fullName>Fornecedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>